--- a/index.html
+++ b/index.html
@@ -142,6 +142,11 @@
           <img src="./img_capas/SAGA2_LIVRO4.jpg" alt="Capa do Livro 4 da saga Máfia Grega" />
           <p class="titulo-livro">Usada & Grávida do Chefe da Máfia</p>
         </a>
+
+        <a href="https://www.amazon.com.br/BEB%C3%8A-PRESENTE-PARA-MILION%C3%81RIO-QUER-ebook/dp/B0F2X45J94/ref=sr_1_1?__mk_pt_BR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=N77PQMCTY9QP&dib=eyJ2IjoiMSJ9.V8GIfAGjXBARDNXwwx_7xA.as7jQydXkJ-oQPxisJTjKWzpNxOFIehR2dx5Ilq1hzM&dib_tag=se&keywords=um+bebe+de+presente+para+o+milionario+aline+padua&qid=1751855421&s=digital-text&sprefix=um+bebe+de+presente+para+o+milionario+aline+padua%2Cdigital-text%2C205&sr=1-1" class="card">
+          <img src="./img_capas/UM BEBÊ DE PRESENTE PARA O MILIONÁRIO QUE NÃO ME QUER.jpg" alt="Capa do Livro 2 da saga Máfia Grega" />
+          <p class="titulo-livro">UM BEBÊ DE PRESENTE PARA O MILIONÁRIO QUE NÃO ME QUER </p>
+        </a>
       </div>
     </section>
     <!-- FIM SAGA 2 -->
@@ -702,6 +707,18 @@
           <p class="titulo-livro">A BABÁ REJEITADA PELO COWBOY VIÚVO </p>
         </a>
 
+
+        <a href="https://www.amazon.com.br/REJEITADA-CASADA-COM-HERDEIRO-M%C3%81FIA-ebook/dp/B0DPGSNGJV/ref=sr_1_1?__mk_pt_BR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=25CV225KCISPT&dib=eyJ2IjoiMSJ9.whsBOiVXWlMW8QqCJwi6kwSOjY8BSc4XXwlNmP6_GGvGjHj071QN20LucGBJIEps.zyg-8YYoYGPlCcOyokeYd1NiOC3_lWE8hablgXKCZ3g&dib_tag=se&keywords=aline+padua+rejeitada+e+casada+com+o+herdeiro+damafia&qid=1751854873&s=digital-text&sprefix=aline+padua+rejeitada+e+casada+com+o+herdeiro+damafia%2Cdigital-text%2C208&sr=1-1" class="card">
+          <img src="../img_capas/REJEITADA & CASADA COM O HERDEIRO DA MÁFIA.jpg" alt="Capa do Livro 1 da saga Familía Yang" />
+          <p class="titulo-livro">REJEITADA & CASADA COM O HERDEIRO DA MÁFIA</p>
+        </a>
+        
+        <a href="https://www.amazon.com.br/UMA-FILHA-ESCONDIDA-HERDEIRO-M%C3%81FIA-ebook/dp/B0DHDBCP27/ref=sr_1_1?crid=30XJ89GK3J55D&dib=eyJ2IjoiMSJ9.1pAdpkrbbkIpvrOsKauTkHJrhIXVsG5y0zuskHVjcDlql3Rf_ucopxUgzBcy0rzW.OOvAa_Dvkd_ydSBeSbK_gDgJdC54OLCZCYMTdBArcRU&dib_tag=se&keywords=uma+filha+escondida+do+herdeiro+da+m%C3%A1fia+aline+padua&qid=1751855124&s=digital-text&sprefix=aline+padua+uma+%2Cdigital-text%2C226&sr=1-1" class="card">
+          <img src="../img_capas/UMA FILHA ESCONDIDA DO HERDEIRO DA MÁFIA.jpg" alt="Capa do Livro 1 da saga Familía Yang" />
+          <p class="titulo-livro">UMA FILHA ESCONDIDA DO HERDEIRO DA MÁFIA</p>
+        </a>
+
+        
       </div>
     </section>
     <!-- FIM SAGA 19 -->
